--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -98,7 +98,7 @@
 					<ol class="upper-roman">
 						<li><i>Articles et pronoms.</i>
 							<ul>
-								<li>Chap. I. De l'article. <span>24–30</span>
+								<li><a href="#chapter_01">Chap. I. De l'article. <span>24–30</span></a>
 									<ol class="lower-latin">
 										<li>Formes. <span>24–26</span>
 											<ol class="upper-roman">
@@ -114,7 +114,7 @@
 										</li>
 									</ol>
 								</li>
-								<li>Chap. II. Pronoms personnels. <span>30–36</span>
+								<li><a href="#chapter_02">Chap. II. Pronoms personnels. <span>30–36</span></a>
 									<ol class="upper-roman">
 										<li>Pronoms affixes. <span>30</span></li>
 										<li>Pronoms absolus. <span>31</span></li>
@@ -122,20 +122,20 @@
 										<li>Autres formes personnelles. <span>33</span></li>
 									</ol>
 								</li>
-								<li>Chap. III. Adjectifs et pronoms possessifs. <span>36–42</span>
+								<li><a href="#chapter_03">Chap. III. Adjectifs et pronoms possessifs. <span>36–42</span></a>
 									<ol class="upper-roman">
 										<li>Adjectifs possessifs. <span>36</span></li>
 										<li>Pronoms possessifs. <span>39</span></li>
 									</ol>
 								</li>
-								<li>Chap. IV. Adjectifs et pronoms démonstratifs. <span>42–45</span>
+								<li><a href="#chapter_04">Chap. IV. Adjectifs et pronoms démonstratifs. <span>42–45</span></a>
 									<ol class="upper-roman">
 										<li>Pour les objets rapprochés. <span>42</span></li>
 										<li>Pour les objets éloignés. <span>43</span></li>
 										<li>Pronom relatif. <span>44</span></li>
 									</ol>
 								</li>
-								<li>Chap. V.
+								<li><a href="#chapter_05">Chap. V.</a>
 									<ol class="upper-roman">
 										<li>Pronoms interrogatifs. <span>45–47</span></li>
 										<li>Pronoms indéfinis. <span>47–51</span></li>
@@ -145,7 +145,7 @@
 						</li>
 						<li><i>Nom.</i>
 							<ul>
-								<li>Chap. VI. Formation, genre et nombre des noms. <span>52–65</span>
+								<li><a href="#chapter_06">Chap. VI. Formation, genre et nombre des noms. <span>52–65</span></a>
 									<ol class="upper-roman">
 										<li>Formation et genre. <span>52–61</span>
 											<ol class="decimal">
@@ -162,13 +162,13 @@
 										</li>
 									</ol>
 								</li>
-								<li>Chap. VII. Relations des noms entr'eux. <span>65–69</span>
+								<li><a href="#chapter_07">Chap. VII. Relations des noms entr'eux. <span>65–69</span></a>
 								<ol class="upper-roman">
 									<li>Apposition. <span>65</span></li>
 									<li>Annexion. <span>67</span></li>
 								</ol>
 							</li>
-							<li>Chap. VIII. Des adjectifs en particulier. <span>69–74</span>
+								<li><a href="#chapter_08">Chap. VIII. Des adjectifs en particulier. <span>69–74</span></a>
 								<ol class="upper-roman">
 									<li>Formation. <span>69</span></li>
 									<li>Place de l'adjectif. <span>71</span></li>
@@ -181,7 +181,7 @@
 									</li>
 								</ol>
 							</li>
-							<li>Chap. IX. De la numération. <span>74–82</span>
+								<li><a href="#chapter_09">Chap. IX. De la numération. <span>74–82</span></a>
 								<ol class="upper-roman">
 									<li>Les nombres. <span>74–80</span>
 										<ol class="decimal">
@@ -198,7 +198,7 @@
 					</li>
 					<li><i>Verbe.</i>
 						<ul>
-							<li>Chap. X. Des verbes en eux-mêmes. <span>83</span>
+							<li><a href="#chapter_10">Chap. X. Des verbes en eux-mêmes. <span>83</span></a>
 								<ol class="upper-roman">
 									<li>Formes des verbes. <span>83–87</span>
 										<ol class="lower-latin">
@@ -235,7 +235,7 @@
 									</li>
 								</ol>
 							</li>
-							<li>Chap. XI. Conjugaison du verbe. <span>101–144</span>
+							<li><a href="#chapter_11">Chap. XI. Conjugaison du verbe. <span>101–144</span></a>
 								<ol class="decimal">
 									<li>Tableau synoptique de la conjugaison. <span>102–105</span></li>
 									<li>Syntaxe et explications. <span>105–144</span>
@@ -311,7 +311,7 @@
 									</li>
 								</ol>
 							</li>
-							<li>Chap. XII. Ancienne conjugaison. <span>144–155</span>
+							<li><a href="#chapter_12">Chap. XII. Ancienne conjugaison. <span>144–155</span></a>
 								<ol class="upper-roman">
 									<li>Les quatre verbes adjectifs. <span>145</span>
 										<ol class="decimal">
@@ -332,26 +332,26 @@
 					</li>
 					<li><i>Particules.</i>
 						<ul>
-							<li>Chap. XIII. Prépositions. <span>155–163</span>
+							<li><a href="#chapter_13">Chap. XIII. Prépositions. <span>155–163</span></a>
 								<ol class="upper-roman">
 									<li>Prépositions simples. <span>155</span></li>
 									<li>Prépositions composées. <span>161</span></li>
 									<li>Prépositions grecques. <span>163</span></li>
 								</ol>
 							</li>
-							<li>Chap. XIV. Adverbes. <span>164–166</span>
+							<li><a href="#chapter_14">Chap. XIV. Adverbes. <span>164–166</span></a>
 								<ol class="decimal">
 									<li>De temps et de lieu. <span>164</span></li>
 									<li>De manière. <span>164</span></li>
 									<li>De situation. <span>163–165</span></li>
 								</ol>
 							</li>
-							<li>Chap. XV. Conjonctions. <span>167–172</span></li>
+							<li><a href="#chapter_15">Chap. XV. Conjonctions. <span>167–172</span></a></li>
 						</ul>
 					</li>
 					<li><i>Des propositions.</i>
 						<ul>
-							<li>Chap. XVI. Proposition verbale. <span>172–177</span>
+							<li><a href="#chapter_16">Chap. XVI. Proposition verbale. <span>172–177</span></a>
 								<ol class="upper-roman">
 									<li>Ordre des éléments. <span>172</span></li>
 									<li>Prolepse. <span>173</span>
@@ -363,7 +363,7 @@
 									<li>Accord des éléments. <span>177</span></li>
 								</ol>
 							</li>
-							<li>Chap. XVII. Proposition nominale. <span>178–184</span>
+							<li><a href="#chapter_17">Chap. XVII. Proposition nominale. <span>178–184</span></a>
 								<ol class="upper-roman">
 									<li>Proposition nominale simple. <span>178</span></li>
 									<li>Proposition nominale avec <em>ⲡⲉ</em>, <em>ⲧⲉ</em>, <em>ⲛⲉ</em>. <span>179</span></li>
@@ -371,8 +371,8 @@
 									<li>Proposition nominale négative. <span>184</span></li>
 								</ol>
 							</li>
-							<li>Chap. XVIII. Union des propositions entr'elles. <span>185–187</span></li>
-							<li>Chap. XIX. Proposition interrogative. <span>187–190</span>
+							<li><a href="#chapter_18">Chap. XVIII. Union des propositions entr'elles. <span>185–187</span></a></li>
+							<li><a href="#chapter_19">Chap. XIX. Proposition interrogative. <span>187–190</span></a>
 								<ol class="decimal">
 									<li>Par le ton de la voix. <span>187</span></li>
 									<li>Au moyen d'adverbes. <span>187</span></li>
@@ -380,7 +380,7 @@
 									<li>Interrogation indirecte. <span>190</span></li>
 								</ol>
 							</li>
-							<li>Chap. XX. Proposition relative. <span>191–196</span>
+							<li><a href="#chapter_20">Chap. XX. Proposition relative. <span>191–196</span></a>
 								<ol class="decimal">
 									<li>Indicatif présent. <span>192</span></li>
 									<li>Futur. <span>193</span></li>
@@ -389,7 +389,7 @@
 									<li>Proposition relative négative. <span>195</span></li>
 								</ol>
 							</li>
-							<li>Chap. XXI. Proposition conditionnelle. <span>196–200</span>
+							<li><a href="#chapter_21">Chap. XXI. Proposition conditionnelle. <span>196–200</span></a>
 								<ol class="decimal">
 									<li>Sans conjonction. <span>197</span></li>
 									<li>Avec <em>ϣⲁⲛ</em>. <span>198</span></li>
@@ -398,7 +398,7 @@
 									<li>Avec <em>ⲓⲥϫⲉ</em>. <span>199</span></li>
 								</ol>
 							</li>
-							<li>Chap. XXII. Proposition temporelle. <span>200–203</span>
+							<li><a href="#chapter_22">Chap. XXII. Proposition temporelle. <span>200–203</span></a>
 								<ol class="decimal">
 									<li>Sans conjonction. <span>200</span></li>
 									<li>Avec <em>ⲓⲥϫⲉⲛ</em>. <span>201</span></li>
@@ -1017,7 +1017,7 @@
 				<div class="chapter_group">
 				<h4>I. Articles et Pronoms.</h4>
 				<div class="chapter">
-				<h5>Chaptire I. De l'Article.</h5>
+				<h5 id="chapter_01">Chaptire I. De l'Article.</h5>
 				<h6>A. Formes.</h6>
 				<div id="section-041" class="section" data-section-no="41">
 					<p>Il y a en copte deux articles: l'article défini et l'article indéfini.</p>
@@ -1220,7 +1220,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre II. Pronoms Personnels.</h5>
+				<h5 id="chapter_02">Chapitre II. Pronoms Personnels.</h5>
 				<h6>I. Pronoms affixes.</h6>
 				<div id="section-058" class="section" data-section-no="58">
 					<table>
@@ -1606,7 +1606,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre III. Adjectifs et Pronoms Possessifs.</h5>
+				<h5 id="chapter_03">Chapitre III. Adjectifs et Pronoms Possessifs.</h5>
 				<p>Les adjectifs et pronoms possessifs sont formés de l'article et des pronoms personnels affixes.</p>
 				<h6>I. Adjectifs possessifs.</h6>
 				<div id="section-074" class="section" data-section-no="74">
@@ -2002,7 +2002,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre IV.</h5>
+				<h5 id="chapter_04">Chapitre IV.</h5>
 				<p>Adjectifs et Pronoms Démonstratifs.</p>
 				<h6>I. Pour les objets rapprochés.</h6>
 <p><i><b>1.</b> Adjectifs.</i></p>
@@ -2132,7 +2132,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre V.</h5>
+				<h5 id="chapter_05">Chapitre V.</h5>
 				<h6>I. Pronoms Interrogatifs.</h6>
 				<div id="section-100" class="section" data-section-no="100">
 					<p>1. <em>ⲁϣ</em> quel? quelle?</p>
@@ -2362,7 +2362,7 @@
 					<p>Sous le terme de <i>nom</i> nous comprenons ici les substantifs, les adjectifs et les nombres.</p>
 				</div>
 				<div class="chapter">
-					<h5>Chapitre VI.</h5>
+					<h5 id="chapter_06">Chapitre VI.</h5>
 					<p>Formation, Genre et Nombre des Noms.</p>
 				<h6>I. Formation et genre.</h6>
 				<div id="section-121" class="section" data-section-no="121">
@@ -2718,7 +2718,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre VII.</h5>
+				<h5 id="chapter_07">Chapitre VII.</h5>
 				<p>Relations des Noms Entr'eux.</p>
 				<h6>I. Apposition.</h6>
 				<div id="section-152" class="section" data-section-no="152">
@@ -2834,7 +2834,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre VIII.</h5>
+				<h5 id="chapter_08">Chapitre VIII.</h5>
 				<p>Des Adjectifs en Particulier.</p>
 				<h6>I. Formation.</h6>
 				<p>La langue copte possède relativement peu d'adjectifs proprement dits, surtout d'adjectifs primitifs. On a vu §§ 124, 125, la formation des adjectifs dérivés; et §§ 135, 137, 141, celle des adjectifs composés.</p>
@@ -2993,7 +2993,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre IX.</h5>
+				<h5 id="chapter_09">Chapitre IX.</h5>
 				<p>De la Numération.</p>
 				<h6>I. Les nombres.</h6>
 				<div id="section-175" class="section" data-section-no="175">
@@ -3664,7 +3664,7 @@
 				<div class="chapter_group">
 				<h4>III. Verbe.</h4>
 				<div class="chapter">
-				<h5>Chapitre X.</h5>
+				<h5 id="chapter_10">Chapitre X.</h5>
 				<p>Des Verbes en Eux-Mêmes.</p>
 				<h6>I. Formes des verbes.</h6>
 				<p>On distingue dans le verbe copte deux formes importantes: l'infinitif et le qualitatif.</p>
@@ -4955,7 +4955,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre XI.</h5>
+				<h5 id="chapter_11">Chapitre XI.</h5>
 				<p>Conjugaison du Verbe.</p>
 				<div id="section-232" class="section" data-section-no="232">
 					<h6>1. La conjugaison copte n'a qu'une seule voix, la voix active. A l'exception du premier présent et du premier futur qui ont une formation particulière, tous les temps sont composés de la même manière et comprennent trois parties:</h6>
@@ -6311,7 +6311,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre XII.</h5>
+				<h5 id="chapter_12">Chapitre XII.</h5>
 				<p>Ancienne Conjugaison.</p>
 				<div id="section-292" class="section" data-section-no="292">
 					<p>Dans l'ancienne langue égyptienne les temps simples se formaient, comme le prétérit arabe (<em class="ar">الماضي</em>), en plaçant le sujet, nom ou pronom, après la racine verbale. Ce mode de conjugaison a persisté en copte dans les verbes suivants:</p>
@@ -6873,7 +6873,7 @@
 				<div class="chapter_group">
 				<h4>IV. Particules.</h4>
 				<div class="chapter">
-				<h5>Chapitre XIII.</h5>
+				<h5 id="chapter_13">Chapitre XIII.</h5>
 				<p>Prépositions.</p>
 				<div id="section-311" class="section" data-section-no="311">
 					<p>Les prépositions sont <i>simples</i> (<em>ⲉ</em>) ou <i>composées</i> (<em>ⲉ-ϫⲉⲛ</em>). Elles s'emploient avec les noms et avec les pronoms affixes. Dans le premier cas elles sont à l'état construit et l'accent est sur leur régime; dans le second cas elles portent elles-mêmes l'accent tonique.</p>
@@ -7288,7 +7288,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre XIV.</h5>
+				<h5 id="chapter_14">Chapitre XIV.</h5>
 				<p>Adverbes.</p>
 				<p>Il y a en copte un certain nombre d'adverbes simples tels que: <em>ⲁϩⲁ</em> «oui», <em>ⲑⲱⲛ</em> «où?», <em>ⲣⲁⲥϯ</em> «demain». On les apprendra par l'usage. Nous ne donnons ici que les règles générales.</p>
 				<h6>1. Adverbes de temps et de lieu.</h6>
@@ -7380,7 +7380,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre XV.</h5>
+				<h5 id="chapter_15">Chapitre XV.</h5>
 				<p>Conjonctions.</p>
 				<p>Voici les conjonctions qui donnent lieu à quelques remarques de grammaire.</p>
 				<p><em>ⲟⲩⲟϩ</em> (Ṣ. <em>ⲁⲩⲱ</em>), <em>ⲛⲉⲙ</em> (Ṣ. <em>ⲙⲛ̄</em>), <em>ϩⲓ</em> «et».</p>
@@ -7514,7 +7514,7 @@
 					<p>Nous verrons ensuite les différentes espèces de propositions qui ont une syntaxe particulière.</p>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre XVI.</h5>
+				<h5 id="chapter_16">Chapitre XVI.</h5>
 				<p>Proposition Verbale.</p>
 				<h6>I. Ordre de ses éléments.</h6>
 				<div id="section-347" class="section" data-section-no="347">
@@ -7643,7 +7643,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre XVII.</h5>
+				<h5 id="chapter_17">Chapitre XVII.</h5>
 				<p>Proposition Nominale.</p>
 				<h6>I. Proposition nominale simple.</h6>
 				<div id="section-354" class="section" data-section-no="354">
@@ -7813,7 +7813,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre XVIII.</h5>
+				<h5 id="chapter_18">Chapitre XVIII.</h5>
 				<p>Union des Propositions Entr'elles.</p>
 				<div id="section-367" class="section" data-section-no="367">
 					<p>Les propositions coordonnées sont reliées entr'elles de différentes manières:</p>
@@ -7854,7 +7854,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre XIX.</h5>
+				<h5 id="chapter_19">Chapitre XIX.</h5>
 				<p>Proposition Interrogative.</p>
 				<p>L'interrogation peut être indiquée en copte uniquement par le ton de la voix, par un pronom interrogatif (100–107) ou par un adverbe.</p>
 				<p>Le verbe est généralement à un temps secondaire (2<sup>e</sup> et 3<sup>e</sup> prés. et fut., 2<sup>e</sup> parfait).</p>
@@ -7936,7 +7936,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre XX.</h5>
+				<h5 id="chapter_20">Chapitre XX.</h5>
 				<p>Proposition Relative.</p>
 				<div id="section-378" class="section" data-section-no="378">
 					<p>La proposition relative est celle qui commence par un pronom relatif, que ce pronom soit sujet ou complément. Elle est très fréquente en copte. Elle peut être exprimée:</p>
@@ -8109,7 +8109,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre XXI.</h5>
+				<h5 id="chapter_21">Chapitre XXI.</h5>
 				<p>Proposition Conditionnelle.</p>
 				<div id="section-387" class="section" data-section-no="387">
 					<p>La proposition conditionnelle précède généralement la proposition principale dont elle dépend.</p>
@@ -8193,7 +8193,7 @@
 				</div>
 				</div>
 				<div class="chapter">
-				<h5>Chapitre XXII.</h5>
+				<h5 id="chapter_22">Chapitre XXII.</h5>
 				<p>Proposition Temporelle.</p>
 				<div id="section-394" class="section" data-section-no="394">
 					<p>La proposition temporelle est une proposition dépendante qui exprime une circonstance ou une action ayant lieu en <i>même temps</i> que celle de la proposition principale. Elle correspond aux propositions françaises commençant par «lorsque, tandis que, comme».</p>
