--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1019,35 +1019,39 @@
 				<div class="chapter">
 				<h5 id="chapter_01">Chaptire I. De l'Article.</h5>
 				<h6>A. Formes.</h6>
+				<h5 class="breadcrumb">Chaptire I. De l'Article. > A. Formes.</h5>
 				<div id="section-041" class="section" data-section-no="41">
 					<p>Il y a en copte deux articles: l'article défini et l'article indéfini.</p>
 					<b>I. Article défini.</b>
+					<h5 class="breadcrumb">Chaptire I. De l'Article. > A. Formes. > I. Article défini.</h5>
 					<p>L'article défini se divise en faible et en fort:</p>
 					<table>
 						<tr>
 							<th></th>
-							<th colspan="3">Singulier.</th>
-							<th colspan="2" rowspan="2">Pluriel.</th>
+							<th colspan="2">Singulier.</th>
+							<th rowspan="2">Pluriel.</th>
 						</tr>
 						<tr>
 							<th></th>
-							<th>faible</th>
-							<th>fort</th>
-							<th></th>
-						</tr>
-						<tr>
 							<th>masc.</th>
-							<td><em>ⲡ</em> <em>ⲫ</em></td>
-							<td><em>ⲡⲓ</em></td>
-							<td>le</td>
-							<td rowspan="2"><em>ⲛⲓ</em> <em>ⲛⲉⲛ</em></td>
-							<td rowspan="2">les</td>
+							<th>fém.</th>
 						</tr>
 						<tr>
-							<th>fém.</th>
+							<th>faible</th>
+							<td><em>ⲡ</em> <em>ⲫ</em></td>
 							<td><em>ⲧ</em> <em>ⲑ</em></td>
+							<td rowspan="2"><em>ⲛⲓ</em> <em>ⲛⲉⲛ</em></td>
+						</tr>
+						<tr>
+							<th>fort</th>
+							<td><em>ⲡⲓ</em></td>
 							<td><em>ϯ</em></td>
+						</tr>
+						<tr>
+							<th></th>
+							<td>le</td>
 							<td>la</td>
+							<td>les</td>
 						</tr>
 					</table>
 					<p><em>ⲫ</em> et <em>ⲑ</em> s'emploient au lieu de <em>ⲡ</em> <em>ⲧ</em> devant les lettres <em>ⲃ</em> <em>ⲗ</em> <em>ⲙ</em> <em>ⲛ</em> <em>ⲣ</em> et quelquefois devant <em>ⲓ</em> <em>ⲟⲩ</em>.</p>
@@ -1100,6 +1104,7 @@
 					<p><em>ⲛⲉⲛ-ⲙⲱⲓⲧ ⲙ̀ⲫⲣⲱⲙⲓ</em> «les voies de l'homme»<sup class="footnote">2</sup>.</p>
 				</div>
 				<p><b>II. Article indéfini.</b></p>
+				<h5 class="breadcrumb">Chaptire I. De l'Article. > A. Formes. > II. Article indéfini.</h5>
 				<div id="section-045" class="section" data-section-no="45">
 					<p>Sing. <em>ⲟⲩ</em> «un, une», plur. <em>ϩⲁⲛ</em> «des».</p>
 					<p>Ex. <em>ⲟⲩ-ⲣⲱⲙⲓ</em> «un homme», <em>ϩⲁⲛ-ⲣⲱⲙⲓ</em> «des hommes»;</p>
@@ -1110,8 +1115,11 @@
 					<p class="footnote">2. Pr. 5, 21.</p>
 				</div>
 				<h6>B. Syntaxe de l'article.</h6>
+				<h5 class="breadcrumb">Chaptire I. De l'Article. > B. Syntaxe de l'article.</h5>
 				<p><b>I.</b> Emploi de l'article.</p>
+				<h5 class="breadcrumb">Chaptire I. De l'Article. > B. Syntaxe de l'article. > I. Emploi de l'article.</h5>
 				<p><b>1.</b> Défini et indéfini.</p>
+				<h5 class="breadcrumb">Chaptire I. De l'Article. > B. Syntaxe de l'article. > I. Emploi de l'article. > 1. Défini et indéfini.</h5>
 				<div id="section-046" class="section" data-section-no="46">
 					<p>Placé devant un adverbe ou une construction prépositive<sup class="footnote">1</sup>, l'article défini ou indéfini lui donne le sens d'un substantif ou d'un adjectif:</p>
 					<p><em>ⲛⲓ-ⲉϩⲣⲏⲓ</em> «les supérieurs (litt. les au-dessus)»;</p>
@@ -1123,6 +1131,7 @@
 					<p><em>ⲑⲙⲉⲧⲟⲩⲣⲟ ⲙ̀ⲡⲁⲓⲕⲟⲥⲙⲟⲥ ⲟⲩ-ⲡⲣⲟⲥ-ⲟⲩ-ⲥⲏⲟⲩ ⲧⲉ ⲑⲙⲉⲧⲟⲩⲣⲟ ⲛ̀ⲑⲟϥ ⲙ̀ⲡⲉⲛϭ︤ⲥ︥ ⲟⲩ-ϣⲁ-ⲉⲛⲉϩ ⲧⲉ.</em> «Le royaume de ce monde est éphémère, mais celui de N.-S. est éternel»<sup class="footnote">4</sup>.</p>
 				</div>
 				<p><b>2.</b> Article défini seul.</p>
+				<h5 class="breadcrumb">Chaptire I. De l'Article. > B. Syntaxe de l'article. > I. Emploi de l'article. > 2. Article défini seul.</h5>
 				<div id="section-047" class="section" data-section-no="47">
 					<p>L'article défini accompagne généralement les mots au vocatif, soit seul, soit avec l'interjection <em>ⲱ</em>:</p>
 					<p class="footnote">1. Nous appelons <i>construction prépositive</i> l'ensemble d'une préposition et de son complément (<em class="ar">جار ومجرور</em>).</p>
@@ -1138,6 +1147,7 @@
 					<p><em>ⲃⲁⲃⲩⲗⲱⲛ</em> et <em>ⲑ-ⲃⲁⲃⲩⲗⲱⲛ</em> «Babylone», <em>ⲧ-ⲕⲁⲛⲁ</em>«Cana»<sup class="footnote">4</sup>, <em>ⲑ-ⲃⲁⲥⲁⲛ</em><sup class="footnote">5</sup> et <em>ϯ-ⲃⲁⲥⲁⲛ</em><sup class="footnote">6</sup>«Bassan»<sup class="footnote">7</sup>.</p>
 				</div>
 				<p><b>3.</b> Article indéfini seul.</p>
+				<h5 class="breadcrumb">Chaptire I. De l'Article. > B. Syntaxe de l'article. > I. Emploi de l'article. > 3. Article indéfini seul.</h5>
 				<div id="section-049" class="section" data-section-no="49">
 					<p>Outre les cas du § 46, l'article indéfini s'emploie:</p>
 					<p><b>1.</b> Dans un sens partitif comme l'article partitif français <i>du</i>, <i>des</i>: <em>ⲟⲩ-ⲛⲟⲩⲃ ⲛⲉⲙ ⲟⲩ-ⲗⲓⲃⲁⲛⲟⲥ ⲛⲉⲙ ⲟⲩ-ϣⲁⲗ</em> «de l'or, de l'encens et de la myrrhe»<sup class="footnote">8</sup>.</p>
@@ -1159,6 +1169,7 @@
 					<p class="footnote">10. Pr. 1, 11.</p>
 				</div>
 				<p><b>II.</b> Suppression de l'article.</p>
+				<h5 class="breadcrumb">Chaptire I. De l'Article. > B. Syntaxe de l'article. > II. Suppression de l'article.</h5>
 				<p>Un substantif ne prend pas d'article:</p>
 				<div id="section-050" class="section" data-section-no="50">
 					<p><b>1.</b> Quand il est uni intimement à un autre substantif qui le précède, de manière à ne former avec lui qu'un seul tout, soit que le premier ait <i>la forme abrégée</i> ou <i>la forme pleine</i>:</p>
