--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1233,6 +1233,7 @@
 				<div class="chapter">
 				<h5 id="chapter_02">Chapitre II. Pronoms Personnels.</h5>
 				<h6>I. Pronoms affixes.</h6>
+				<h5 class="breadcrumb">Chapitre II. Pronoms Personnels. > I. Pronoms affixes.</h5>
 				<div id="section-058" class="section" data-section-no="58">
 					<table>
 						<tr>
@@ -1358,6 +1359,7 @@
 					</table>
 				</div>
 				<h6>II. Pronoms absolus.</h6>
+				<h5 class="breadcrumb">Chapitre II. Pronoms Personnels. > II. Pronoms absolus.</h5>
 				<div id="section-062" class="section" data-section-no="62">
 					<table>
 						<tr>
@@ -1413,6 +1415,7 @@
 					<p><em>ⲛⲉⲛ-ⲏⲟⲩ ⲁⲛⲟⲛ</em> «nos maisons à nous»<sup class="footnote">4</sup>.</p>
 				</div>
 				<h6>III. Génitif et accusatif du pronom personnel.</h6>
+				<h5 class="breadcrumb">Chapitre II. Pronoms Personnels. > III. Génitif et accusatif du pronom personnel.</h5>
 				<div id="section-065" class="section" data-section-no="65">
 					<table>
 						<tr>
@@ -1461,6 +1464,7 @@
 					<p>Sur l'emploi de <em>ⲙ̀- ⲙ̀ⲙⲟ⸗</em> comme préposition, voir 316.</p>
 				</div>
 				<h6>IV. Autres formes personnelles.</h6>
+				<h5 class="breadcrumb">Chapitre II. Pronoms Personnels. > IV. Autres formes personnelles.</h5>
 				<div id="section-067" class="section" data-section-no="67">
 					<p>Il y a en copte un certain nombre de mots qui suivent en général le nom ou le pronom personnel pour en modifier le sens. Les voici:</p>
 					<p><b>1.</b> <em>ϩⲱ⸗</em> aussi</p>
