--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1624,6 +1624,7 @@
 				<h5 id="chapter_03">Chapitre III. Adjectifs et Pronoms Possessifs.</h5>
 				<p>Les adjectifs et pronoms possessifs sont formés de l'article et des pronoms personnels affixes.</p>
 				<h6>I. Adjectifs possessifs.</h6>
+				<h5 class="breadcrumb">Chapitre III. Adjectifs et Pronoms Possessifs. > I. Adjectifs possessifs.</h5>
 				<div id="section-074" class="section" data-section-no="74">
 					<table>
 						<tr>
@@ -1886,6 +1887,7 @@
 					<p>Pour <em>ϫⲱ⸗</em> et ses composés on emploie les deux formes: <em>ⲉϫⲱⲧⲉⲛ</em> et <em>ⲉϫⲉⲛ-ⲑⲏⲛⲟⲩ</em>«sur vous»<sup class="footnote">2</sup>.</p>
 				</div>
 				<h6>II. Pronoms possessifs.</h6>
+				<h5 class="breadcrumb">Chapitre III. Adjectifs et Pronoms Possessifs. > II. Pronoms possessifs.</h5>
 <p><i><b>1.</b> Formes.</i></p>
 				<div id="section-086" class="section" data-section-no="86">
 					<p>Le pronom possessif a deux formes:</p>
@@ -2020,6 +2022,7 @@
 				<h5 id="chapter_04">Chapitre IV.</h5>
 				<p>Adjectifs et Pronoms Démonstratifs.</p>
 				<h6>I. Pour les objets rapprochés.</h6>
+				<h5 class="breadcrumb">Chapitre IV. > I. Pour les objets rapprochés.</h5>
 <p><i><b>1.</b> Adjectifs.</i></p>
 				<div id="section-092" class="section" data-section-no="92">
 					<table>
@@ -2076,6 +2079,7 @@
 					<p><em>ⲛⲁⲓ ⲉϥϫⲱ ⲙ̀ⲙⲱⲟⲩ</em> «disant ces choses»<sup class="footnote">3</sup>.</p>
 				</div>
 				<h6>II. Pour les objets éloignés.</h6>
+				<h5 class="breadcrumb">Chapitre IV. > II. Pour les objets éloignés.</h5>
 <p><i><b>1.</b> Pronoms.</i></p>
 				<div id="section-095" class="section" data-section-no="95">
 					<p>Sing. masc. <em>ⲫⲏ</em> «celui-là», fém. <em>ⲑⲏ</em> «celle-là»; pl. <em>ⲛⲏ</em> «ceux-là, celles-là».</p>
@@ -2095,6 +2099,7 @@
 					<p>Le pronom peut aussi être renforcé par <em>ⲉⲧⲉⲙⲙⲁⲩ</em>: <em>ⲫⲏ ⲉⲧⲉⲙⲙⲁⲩ</em> «celui-là».</p>
 				</div>
 				<p>Pronom relatif.</p>
+				<h5 class="breadcrumb">Chapitre IV. > III. Pronom relatif.</h5>
 				<div id="section-097" class="section" data-section-no="97">
 					<p>Le pronom relatif a trois formes qui conviennent à tous les genres et à tous les nombres: <em>ⲉ</em>, <em>ⲉⲧ</em>, <em>ⲉⲧⲉ</em>.</p>
 					<p>Ce pronom s'unit aux démonstratifs <em>ⲫⲏ</em>, <em>ⲑⲏ</em>, <em>ⲛⲏ</em> pour former les composés suivants appelés relatifs démonstratifs:</p>
@@ -2149,6 +2154,7 @@
 				<div class="chapter">
 				<h5 id="chapter_05">Chapitre V.</h5>
 				<h6>I. Pronoms Interrogatifs.</h6>
+				<h5 class="breadcrumb">Chapitre V. > I. Pronoms Interrogatifs.</h5>
 				<div id="section-100" class="section" data-section-no="100">
 					<p>1. <em>ⲁϣ</em> quel? quelle?</p>
 					<p>2. <em>ⲛⲓⲙ</em> qui? quel?</p>
@@ -2243,6 +2249,7 @@
 					<p><em>ⲁϧⲟⲕ ⲛⲉⲙⲁⲛ ⲡϣⲏⲣⲓ ⲙ̀ⲫϯ</em> <em class="ar">ما انا ولكَ ابن الله</em> «qu'y a-t-il entre toi et nous, Fils de Dieu?»<sup class="footnote">2</sup>.</p>
 				</div>
 				<h6>II. Pronoms Indéfinis.</h6>
+				<h5 class="breadcrumb">Chapitre V. > II. Pronoms Indéfinis.</h5>
 				<div id="section-107" class="section" data-section-no="107">
 					<p>1. <em>ⲟⲩⲁⲓ</em>, <i>fém.</i> <em>ⲟⲩⲓ</em> un, une.</p>
 					<p>2. <em>ⲟⲩⲟⲛ</em> quelqu'un.</p>
