--- a/coptic/mallon/verbs/index.html
+++ b/coptic/mallon/verbs/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<title>Grammaire copte</title>
-		<link rel="stylesheet" href="./styles/styles.css">
+		<title>Mallon 1907 [Verbs]</title>
+		<link rel="stylesheet" href="../styles/styles.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
