--- a/coptic/mallon/index.html
+++ b/coptic/mallon/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 	<head>
-		<title>Grammaire copte</title>
+		<title>Mallon 1907 [Full]</title>
 		<link rel="stylesheet" href="./styles/styles.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
